# so.version

./: .gitignore  CMakeLists.txt  README.md  example.cpp  sopa.json
include/: version.hpp
source/: CMakeLists.txt  parser.cpp  parser.hpp  version.cpp  version_parser.cpp  version_parser.hpp
